--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="i" href="" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="images/favicon-32x32.png" />
-    <title>Document</title>
+    <link
+      rel="icon"
+      href="images/favicon-32x32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <title>Improve your Front-End skills</title>
   </head>
   <body>
     <main>
       <article class="container">
-        <section class="code-bg">
+        <section>
           <img
             src="images/image-qr-code.png"
             alt="QR code that links to Frontend Mentor to improve your coding skills"
